--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ voltage limit [v] = 230
 current limit [a] = 60
 allow negative current? = False
 calibration-file = magnet-calib.dat
-maximum field rate [mt/s] = 100
+maximum field rate [mt/s] = 25
 
 [Lock-In]
 time constant [ms] = 300
@@ -12,8 +12,11 @@ sensitivity [mv] = 1
 modulation frequency [khz] = 13
 
 [R&S-Frequency Generator]
-address = 8
+address = GPIB0::28::INSTR
 
 [Hall Sensor]
-address = 14
+address = GPIB0::10::INSTR
+
+[Keithley 2000]
+address = GPIB0::16::INSTR
 
